==> iarsystems/ewarm-nxp-example-projects/LPC13xx/LPC1300CMSIS/Drivers/source/lpc13xx_uart.c <==
#include "LPC13xx.h"
#include "lpc13xx_uart.h"

void UART_Init(void)
{
	/* Enable UART clock */
	LPC_SYSCON->SYSAHBCLKCTRL |= (1<<12);
//	LPC_SYSCON->PCLKCTRL |= (1<<1);   /* Enable the peripheral clock */
	LPC_SYSCON->UARTCLKDIV = 0x1;     /* divided by 1 */

	/* Setup pin select */
	LPC_IOCON->PIO1_6 &= ~0x07;    /*  UART I/O config */
	LPC_IOCON->PIO1_6 |= 0x01;     /* UART RXD */
	LPC_IOCON->PIO1_7 &= ~0x07;
	LPC_IOCON->PIO1_7 |= 0x01;     /* UART TXD */

	/* Default setup:
	 * baudrate = 9600 bps
	 * 8 bit data
	 * 1 stop bit
	 * no parity
	 */

	UART_SetDatabit(UART_DATABIT_8);
	UART_SetParity(UART_PARITY_NONE);
	UART_SetStopbit(UART_STOPBIT_1);
	/* setup baurate */
	UART_SetBaudrate(9600);
	LPC_UART->IER = 0;

	LPC_UART->FCR = 0x07;		/* Enable and reset TX and RX FIFO. */

}

void UART_DeInit(void)
{
	LPC_SYSCON->SYSAHBCLKCTRL &= ~(1<<11); /* Disable UART clock */
//	LPC_SYSCON->PCLKCTRL &= ~(1<<1);   /* Disable the peripheral clock */
}

void UART_FIFOConfig(UART_FITO_LEVEL_Type level)
{
	if(level == UART_FIFO_DISABLE)
	{
		LPC_UART->FCR &=~(0x01);
		return;
	}
	else
	{
		LPC_UART->FCR &= ~(3<<6); //clear bit FCR[7:6]
		switch (level)
		{
		case UART_FIFO_TRGLEV0:
			break;
		case UART_FIFO_TRGLEV1:
			LPC_UART->FCR |=(1<<6);
			break;
		case UART_FIFO_TRGLEV2:
			LPC_UART->FCR |=(2<<6);
			break;
		case UART_FIFO_TRGLEV3:
			LPC_UART->FCR |=(3<<6);
			break;
		default:
			break;
		}
	}
	//enable FIFOs
	LPC_UART->FCR |= 0x01;
}

void UART_IntConfig(UART_INT_Type IntType, FunctionalState NewState)
{
	uint32_t tmp;
	switch(IntType)
	{
	case UART_INTCFG_RBR:
		tmp = 1;
		break;
	case UART_INTCFG_THRE:
		tmp = (1<<1);
		break;
	case UART_INTCFG_RLS:
		tmp = (1<<2);
		break;
	case UART_INTCFG_ABEO:
		tmp = (1<<8);
		break;
	case UART_INTCFG_ABTO:
		tmp = (1<<9);
		break;
	}
	if(NewState == ENABLE)
	{
		LPC_UART->IER |=tmp;
	}
	else
		LPC_UART->IER &= ~tmp;
}

void UART_TXCmd(FunctionalState NewState)
{
	if(NewState == ENABLE)
	{
		LPC_UART->TER |=(1<<7);
	}
	else
		LPC_UART->TER &= ~(1<<7);
}

uint8_t UART_GetLineStatus(void)
{
	return LPC_UART->LSR;
}
